feat: Add font management, revenue dashboard, and security enhancements
- Add CustomFont model with file validation (WOFF, WOFF2, TTF, OTF)
- Add font upload/management API and frontend page
- Add FontLoader component for dynamic font loading
- Add Expense model for tracking costs
- Add Revenue dashboard with income/expenses/profit charts
- Add period filters (week/month/quarter/year) for revenue
- Add rate limiting with custom throttle classes
- Add localStorage obfuscation for auth tokens
- Add security headers to nginx (CSP, XSS, etc.)
- Switch to local fonts (@fontsource/inter)
- Update Docker config with fonts/branding directories

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,8 +33,8 @@ RUN pip install --no-cache-dir --upgrade pip \
 # Copy project files
 COPY . /app/
 
-# Create necessary directories
-RUN mkdir -p /app/staticfiles /app/media /app/logs
+# Create necessary directories including fonts
+RUN mkdir -p /app/staticfiles /app/media/fonts /app/media/branding /app/logs
 
 # Copy entrypoint script and fix line endings (Windows -> Linux)
 COPY docker-entrypoint.sh /app/docker-entrypoint.sh
