--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,14 +9,56 @@ server {
     gzip_vary on;
     gzip_min_length 1024;
     gzip_proxied any;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml application/manifest+json;
 
-    # Security headers
+    # =========================================
+    # Security Headers
+    # =========================================
+    
+    # Prevent clickjacking
     add_header X-Frame-Options "SAMEORIGIN" always;
+    
+    # Prevent MIME type sniffing
     add_header X-Content-Type-Options "nosniff" always;
+    
+    # XSS Protection (legacy, but still useful)
     add_header X-XSS-Protection "1; mode=block" always;
+    
+    # Referrer Policy
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # Permissions Policy (restrict browser features)
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=(), payment=()" always;
+    
+    # Content Security Policy - strict policy with local fonts
+    # Allows:
+    # - Scripts: self only (no inline except for Vite)
+    # - Styles: self and inline (needed for Tailwind)
+    # - Fonts: self and backend (for custom uploaded fonts)
+    # - Images: self, data URIs, HTTPS (for dynamic logos)
+    # - Connect: self and any HTTPS (for configurable backend)
+    # - Frame ancestors: self only (prevent embedding)
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' https: data:; img-src 'self' data: https: blob:; connect-src 'self' https: wss:; frame-ancestors 'self'; base-uri 'self'; form-action 'self';" always;
 
-    # Cache static assets
+    # Service Worker - no cache, always fresh
+    location /sw.js {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
+    # Workbox files - no cache
+    location ~* workbox.*\.js$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # PWA Manifest
+    location /manifest.webmanifest {
+        add_header Content-Type "application/manifest+json";
+        add_header Cache-Control "no-cache";
+    }
+
+    # Cache static assets (but not SW files)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
