--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.1.0",
     "axios": "^1.6.0",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
+    "recharts": "^3.7.0",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
